# v0.25.1
- added FindReplace() for replacng text strings in a specified file.
- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list classed as "wordlist" which has an associated print method. (based on similar functionality in the devtools package)
- added package hunspell to the growing list of dependencies
- fixed spelling in vignettes using SpellCheckFiles()
- added local and global options for lists of words to ignore during spell checking.

# v0.25.0
- did some overdue spell checking
- fixed wrong filename in PrepareWriteR() and its help page.
- added more Get*() commands to download and install several useful tools; based on functions from the installr package with the downloaded files going into the user's MyBrailleR folder. Python 2.7 and the associated wxPython version are hard wired at present until the dynamic links can be established.
- altered MakeBatch() to accept both upper and lower case R in file extensions.
- added ThankYou() to create an email message from a very short template.
- added LURN() to open the Let's Use R Now manual in a browser. It will open the version for blind users by default.
- added vignette on getting started with WriteR.
- updated vignettes
- updated WriteR.pyw and WriteROptions files. to v0.160530.0
- added GetWriteR() to download executable version for Windows users. This currently comes from GitHub by default, but was originally tested on http://R-Resources.massey.ac.nz; this can be used again if the user sets the argument UseGitHub=FALSE but the zip file downloaded must be moved to the right folder and manually unzipped. The function is currently unavilable due to problems with the executable file itself.
- added experimental VI.ggplot() thanks to starter from Tony Hirst
- added vignette for testing VI.ggplot() via ggplot2::qplot() calls. (This is far from complete.)
- added use of magrittr package to gain  the benefits of the pipe operator


# v0.24.2