@@ -1,0 +1,14 @@
+OldString,NewString,Notes
+ hte , the ,common typo
+t he , the ,dangerous
+ ot , to ,common typo
+ fi , if ,common typo
+ os , so ,common typo
+ si , is ,common typo
+oudl ,ould ,not an entire word
+ htis , this ,common typo
+ fo , of ,common typo
+ nad , and ,common typo
+iwth,with,common typo
+ htat , that ,common typo
+ wnat , want ,common typo
