@@ -1,0 +1,2 @@
+lastdir: .
+newText: Use WriteR to edit your R markdown files, perhaps by starting from a template file
