@@ -1,6 +1,9 @@
 # v0.25.1
-- added FindReplace() for replacng text strings in a specified file.
-- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list classed as "wordlist" which has an associated print method. (based on similar functionality in the devtools package)
+- moved files from Inst to Inst/MyBrailleR for cleaner package installation. updated installation functions as needed.
+- added AutoSpellCheck() for fixing all my irritating typos. 
+- added AutoSpellList.csv for my list of typos to fix. Users can update this for themselves.
+- added FindReplace() for replacing text strings in a specified file.
+- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list with the classed set to "wordlist" which has an associated print method. (based on similar functionality in the devtools package)
 - added package hunspell to the growing list of dependencies
 - fixed spelling in vignettes using SpellCheckFiles()
 - added local and global options for lists of words to ignore during spell checking.
